cabal-version:      2.4
name:               hasura-debug
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Brandon Simmons
maintainer:         brandon.m.simmons@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hasura-debug
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        FreeVarAnalysis
        Util

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0,
                      ghc-debug-client,
                      ghc-debug-common,
                      mtl,
                      fgl,
                      containers,
                      process,
                      async,
                      text,
                      ghc-heap,
                      bytestring,
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options: -Wall -rtsopts -threaded "-with-rtsopts=-N"
                 -fdistinct-constructor-tables
                 -finfo-table-map
                 -eventlog

-- An example executable that can be analyzed
executable example
    hs-source-dirs:   example
    main-is:          Main.hs
    build-depends:    base ^>=4.16.1.0,
                      ghc-debug-stub
    ghc-options: -Wall -rtsopts -threaded "-with-rtsopts=-N" -O2
    ghc-options: -fdistinct-constructor-tables -finfo-table-map

